Adjust z-index and fix position header.

--- a/client/post-editor/editor-ground-control/style.scss
+++ b/client/post-editor/editor-ground-control/style.scss
@@ -4,6 +4,11 @@
 	padding: 0;
 	margin-bottom: 0;
 	transition: 0.3s box-shadow;
+	position: fixed;
+	top: 47px;
+	left: 0;
+	right: 0;
+	z-index: z-index( 'root', '.editor-ground-control' );
 
 	@include breakpoint( "<660px" ) {
 		padding-top: 0;
