--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -22,6 +22,7 @@
 
 .post-editor__inner {
 	position: relative;
+	top: 62px;
 }
 
 .post-editor__content {
